Replace List.of w/ ImmutableList.of for easier backport to Java 8